	  a decision to return the packet or not:  It should not retai
	  dropped packets. From Max Holtzberg (2013-10-11).
	* drivers/net/encx24j600.c and Kconfig: ENCX24J600: Improved descriptor
	  handling, free packets on rx abort interrupt. From Max Holtzberg
	  (2013-10-11).
	* arch/arm/src/sama4/sam_lcd.c and configs/sama5d3x-ek/include/board.h:
	  Fix PWM precealler divider.  This eliminiates the backlight flicker
	 (2013-10-11).
	* arch/arm/src/sama5/sam_boot.c: Correct how framebuffer memory was
	  being mapped.  The mapping was getting overrwritten and the
	  framebuffer memory was ending up cacheable (2013-10-13).
	* arch/arm/src/sama5/Kconfig, sam_lcdc.c, defconfig, and related files:
	  Remove options for obtaining framebuffer memory in other ways.  That
	  option just really cannot work (2013-10-13).
	* configs/sama5d3x-ek/nxwm:  Add NxWM configuration for SAMA5D3x-EK
	  (2013-10-13).
	* configs/sama5d3x-ek/nxwm/defconfig:  Now uses scaled icons in the
	  the NxWM taskbar (2013-10-15).
	* configs/sama5d3x-ek/nxwm/defconfig:  Use the 320x320 NuttX logo as
	  the NxWM backgroun (2013-10-15).
	* arch/arm/src/stm32/chip/stm32f103c_pinmap.h:  Pinmapping corrections
	  from David Sidrane (2013-10-16).
	* configs/spark:  The Spark device configuration is receiving some
	  TLC from David Sidrane (2013-10-16).
	* drivers/mtd/sst25.c:  Add support for the SST25VF016B.  From David
	  Sidrane (2013-10-16).
	* net/net_close.c: Changed net_close debug output to verbose.  From
	  Max Holtzberg (2013-10-17).
	* net/send.c and net_sendfile.c:  Reset the send timeout when the
	  data is ACKed, not when the data is sent.  Remove concitions on
	  checking for timeout.  From Max Holtzberg (2013-10-17).
	* net/net_sendfile.c:  Correct paramter passed to netdev_txnotify()
	  from Max Holtzberg (2013-10-17).
	* include/nuttx/net/uip/uip-tcp.h, net/send.c, uip/uip_tcpconn.c, and
	  uip/uip_tcpinput.c:  Change how the inital minimum MSS is calculated.
	  Max Holtzberg (2013-10-17).
